adds a bunch of meat to the bibtex file

--- a/main.bib
+++ b/main.bib
@@ -5,8 +5,21 @@
 //
 // 1) if there are one or two authors, list their last names in alphabetical order (e.g., AndoStrickland).
 // 2) if there are three or more authors, list their last initials in alphabetical order (e.g., BCM).
-// 3) if these rules result in name collisions (e.g., the two Ando Hopkins Strickland papers), a short string related to the title of the paper should be appended (e.g., AHSHinfty and AHSTheoremOfTheCube).
+// 3) if these rules result in name collisions (e.g., the two Ando Hopkins Strickland papers), a short string related to the title of the paper should be appended with word-initial capitals (e.g., AHSHinfty and AHSTheoremOfTheCube).
 //
+
+@book {AdamsBlueBook,
+    AUTHOR = {Adams, J. F.},
+     TITLE = {Stable homotopy and generalised homology},
+    SERIES = {Chicago Lectures in Mathematics},
+      NOTE = {Reprint of the 1974 original},
+ PUBLISHER = {University of Chicago Press, Chicago, IL},
+      YEAR = {1995},
+     PAGES = {x+373},
+      ISBN = {0-226-00524-0},
+   MRCLASS = {55-02 (57-02)},
+  MRNUMBER = {1324104 (96a:55002)},
+}
 
 @article {Ando,
     AUTHOR = {Ando, Matthew},
@@ -82,6 +95,24 @@ MRREVIEWER = {Mark Hovey},
        URL = {http://dx.doi.org/10.1016/S0040-9383(99)00057-9},
 }
 
+@article {Balmer,
+    AUTHOR = {Balmer, Paul},
+     TITLE = {Spectra, spectra, spectra---tensor triangular spectra versus
+              {Z}ariski spectra of endomorphism rings},
+   JOURNAL = {Algebr. Geom. Topol.},
+  FJOURNAL = {Algebraic \& Geometric Topology},
+    VOLUME = {10},
+      YEAR = {2010},
+    NUMBER = {3},
+     PAGES = {1521--1563},
+      ISSN = {1472-2747},
+   MRCLASS = {18E30 (19K56 55U35)},
+  MRNUMBER = {2661535 (2012a:18022)},
+MRREVIEWER = {Amnon Neeman},
+       DOI = {10.2140/agt.2010.10.1521},
+       URL = {http://dx.doi.org/10.2140/agt.2010.10.1521},
+}
+
 @article {BCM,
     AUTHOR = {Bendersky, M. and Curtis, E. B. and Miller, H. R.},
      TITLE = {The unstable {A}dams spectral sequence for generalized
@@ -99,4 +130,479 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {Stanley Kochman},
        DOI = {10.1016/0040-9383(78)90028-9},
        URL = {http://dx.doi.org/10.1016/0040-9383(78)90028-9},
+}
+
+@incollection {BJW,
+    AUTHOR = {Boardman, J. Michael and Johnson, David Copeland and Wilson,
+              W. Stephen},
+     TITLE = {Unstable operations in generalized cohomology},
+ BOOKTITLE = {Handbook of algebraic topology},
+     PAGES = {687--828},
+ PUBLISHER = {North-Holland, Amsterdam},
+      YEAR = {1995},
+   MRCLASS = {55S25 (55N20)},
+  MRNUMBER = {1361900 (97b:55022)},
+MRREVIEWER = {Haynes R. Miller},
+       DOI = {10.1016/B978-044481779-2/50016-X},
+       URL = {http://dx.doi.org/10.1016/B978-044481779-2/50016-X},
+}
+
+@article {BuchstaberLazarev,
+    AUTHOR = {Buchstaber, Victor and Lazarev, Andrey},
+     TITLE = {Dieudonn\'e modules and {$p$}-divisible groups associated with
+              {M}orava {$K$}-theory of {E}ilenberg-{M}ac {L}ane spaces},
+   JOURNAL = {Algebr. Geom. Topol.},
+  FJOURNAL = {Algebraic \& Geometric Topology},
+    VOLUME = {7},
+      YEAR = {2007},
+     PAGES = {529--564},
+      ISSN = {1472-2747},
+   MRCLASS = {55N22 (14L05)},
+  MRNUMBER = {2308956 (2008e:55004)},
+MRREVIEWER = {Mark Hovey},
+       DOI = {10.2140/agt.2007.7.529},
+       URL = {http://dx.doi.org/10.2140/agt.2007.7.529},
+}
+
+@book {Demazure,
+    AUTHOR = {Demazure, Michel},
+     TITLE = {Lectures on {$p$}-divisible groups},
+    SERIES = {Lecture Notes in Mathematics},
+    VOLUME = {302},
+      NOTE = {Reprint of the 1972 original},
+ PUBLISHER = {Springer-Verlag},
+   ADDRESS = {Berlin},
+      YEAR = {1986},
+     PAGES = {vi+98},
+      ISBN = {3-540-06092-8},
+   MRCLASS = {14L05 (11G10)},
+  MRNUMBER = {883960 (88a:14049)},
+}
+
+@article {DHS,
+    AUTHOR = {Devinatz, Ethan S. and Hopkins, Michael J. and Smith, Jeffrey
+              H.},
+     TITLE = {Nilpotence and stable homotopy theory. {I}},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {128},
+      YEAR = {1988},
+    NUMBER = {2},
+     PAGES = {207--241},
+      ISSN = {0003-486X},
+     CODEN = {ANMAAH},
+   MRCLASS = {55Q10 (55P42 55Q52)},
+  MRNUMBER = {960945 (89m:55009)},
+MRREVIEWER = {Frederick Cohen},
+       DOI = {10.2307/1971440},
+       URL = {http://dx.doi.org/10.2307/1971440},
+}
+
+@book {EKMM,
+    AUTHOR = {Elmendorf, A. D. and Kriz, I. and Mandell, M. A. and May, J.
+              P.},
+     TITLE = {Rings, modules, and algebras in stable homotopy theory},
+    SERIES = {Mathematical Surveys and Monographs},
+    VOLUME = {47},
+      NOTE = {With an appendix by M. Cole},
+ PUBLISHER = {American Mathematical Society, Providence, RI},
+      YEAR = {1997},
+     PAGES = {xii+249},
+      ISBN = {0-8218-0638-6},
+   MRCLASS = {55N20 (19D10 19D55 55P42 55T25)},
+  MRNUMBER = {1417719 (97h:55006)},
+MRREVIEWER = {Donald M. Davis},
+}
+
+@incollection {GoerssDieudonne,
+    AUTHOR = {Goerss, Paul G.},
+     TITLE = {Hopf rings, {D}ieudonn\'e modules, and {$E_*\Omega^2S^3$}},
+ BOOKTITLE = {Homotopy invariant algebraic structures ({B}altimore, {MD},
+              1998)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {239},
+     PAGES = {115--174},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {1999},
+   MRCLASS = {57T05 (16W30 55N20 55P35 55S05)},
+  MRNUMBER = {1718079 (2000j:57078)},
+MRREVIEWER = {Neil P. Strickland},
+       DOI = {10.1090/conm/239/03600},
+       URL = {http://dx.doi.org/10.1090/conm/239/03600},
+}
+
+@incollection {GLM,
+    AUTHOR = {Goerss, P. and Lannes, J. and Morel, F.},
+     TITLE = {Hopf algebras, {W}itt vectors, and {B}rown-{G}itler spectra},
+ BOOKTITLE = {Algebraic topology ({O}axtepec, 1991)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {146},
+     PAGES = {111--128},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {1993},
+   MRCLASS = {55N20 (16W30 55P42 55P47)},
+  MRNUMBER = {1224910 (95a:55007)},
+       DOI = {10.1090/conm/146/01218},
+       URL = {http://dx.doi.org/10.1090/conm/146/01218},
+}
+
+@article {HKR,
+    AUTHOR = {Hopkins, Michael J. and Kuhn, Nicholas J. and Ravenel, Douglas
+              C.},
+     TITLE = {Generalized group characters and complex oriented cohomology
+              theories},
+   JOURNAL = {J. Amer. Math. Soc.},
+  FJOURNAL = {Journal of the American Mathematical Society},
+    VOLUME = {13},
+      YEAR = {2000},
+    NUMBER = {3},
+     PAGES = {553--594 (electronic)},
+      ISSN = {0894-0347},
+   MRCLASS = {55N22 (55N20 55N91 55R40)},
+  MRNUMBER = {1758754 (2001k:55015)},
+MRREVIEWER = {Andrew J. Baker},
+       DOI = {10.1090/S0894-0347-00-00332-5},
+       URL = {http://dx.doi.org/10.1090/S0894-0347-00-00332-5},
+}
+
+@ARTICLE{HopkinsLurie,
+  author = {Hopkins, Michael J. and Lurie, Jacob},
+  title = {Ambidexterity in {$K(n)$}-local stable homotopy theory},
+  note = {\url{http://www.math.harvard.edu/~lurie/papers/Ambidexterity.pdf}, Accessed: 2015-01-09}
+}
+
+@incollection {HMS,
+    AUTHOR = {Hopkins, Michael J. and Mahowald, Mark and Sadofsky, Hal},
+     TITLE = {Constructions of elements in {P}icard groups},
+ BOOKTITLE = {Topology and representation theory ({E}vanston, {IL}, 1992)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {158},
+     PAGES = {89--126},
+ PUBLISHER = {Amer. Math. Soc.},
+   ADDRESS = {Providence, RI},
+      YEAR = {1994},
+   MRCLASS = {55P42 (55P60 55Q10)},
+  MRNUMBER = {1263713 (95a:55020)},
+MRREVIEWER = {Dominique Arlettaz},
+}
+
+@article {HopkinsSmith,
+    AUTHOR = {Hopkins, Michael J. and Smith, Jeffrey H.},
+     TITLE = {Nilpotence and stable homotopy theory. {II}},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {148},
+      YEAR = {1998},
+    NUMBER = {1},
+     PAGES = {1--49},
+      ISSN = {0003-486X},
+     CODEN = {ANMAAH},
+   MRCLASS = {55P42 (55N20 55Q10)},
+  MRNUMBER = {1652975 (99h:55009)},
+MRREVIEWER = {David A. Blanc},
+       DOI = {10.2307/120991},
+       URL = {http://dx.doi.org/10.2307/120991},
+}
+
+@article {HoveyStrickland,
+    AUTHOR = {Hovey, Mark and Strickland, Neil P.},
+     TITLE = {Morava {$K$}-theories and localisation},
+   JOURNAL = {Mem. Amer. Math. Soc.},
+  FJOURNAL = {Memoirs of the American Mathematical Society},
+    VOLUME = {139},
+      YEAR = {1999},
+    NUMBER = {666},
+     PAGES = {viii+100},
+      ISSN = {0065-9266},
+     CODEN = {MAMCAU},
+   MRCLASS = {55P60 (55N22 55P42 55T15)},
+  MRNUMBER = {1601906 (99b:55017)},
+MRREVIEWER = {J. P. C. Greenlees},
+}
+
+@article {HuntonTurner,
+    AUTHOR = {Hunton, John R. and Turner, Paul R.},
+     TITLE = {Coalgebraic algebra},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {129},
+      YEAR = {1998},
+    NUMBER = {3},
+     PAGES = {297--313},
+      ISSN = {0022-4049},
+     CODEN = {JPAAA2},
+   MRCLASS = {16W30 (18G15 55N20)},
+  MRNUMBER = {1631257 (99g:16048)},
+MRREVIEWER = {Andrew J. Baker},
+       DOI = {10.1016/S0022-4049(97)00076-5},
+       URL = {http://dx.doi.org/10.1016/S0022-4049(97)00076-5},
+}
+
+@article {KLW,
+    AUTHOR = {Kitchloo, Nitu and Laures, Gerd and Wilson, W. Stephen},
+     TITLE = {The {M}orava {$K$}-theory of spaces related to {$BO$}},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {189},
+      YEAR = {2004},
+    NUMBER = {1},
+     PAGES = {192--236},
+      ISSN = {0001-8708},
+     CODEN = {ADMTA4},
+   MRCLASS = {55N15 (55N20)},
+  MRNUMBER = {2093483 (2005k:55002)},
+MRREVIEWER = {Bj{\"o}rn Schuster},
+       DOI = {10.1016/j.aim.2003.10.008},
+       URL = {http://dx.doi.org/10.1016/j.aim.2003.10.008},
+}
+
+@article {Lazard,
+    AUTHOR = {Lazard, Michel},
+     TITLE = {Sur les groupes de {L}ie formels \`a un param\`etre},
+   JOURNAL = {Bull. Soc. Math. France},
+  FJOURNAL = {Bulletin de la Soci\'et\'e Math\'ematique de France},
+    VOLUME = {83},
+      YEAR = {1955},
+     PAGES = {251--274},
+      ISSN = {0037-9484},
+   MRCLASS = {17.0X},
+  MRNUMBER = {0073925 (17,508e)},
+MRREVIEWER = {J. Dieudonn{\'e}},
+}
+
+@incollection {Lazarev,
+    AUTHOR = {Lazarev, A.},
+     TITLE = {Spaces of multiplicative maps between highly structured ring
+              spectra},
+ BOOKTITLE = {Categorical decomposition techniques in algebraic topology
+              ({I}sle of {S}kye, 2001)},
+    SERIES = {Progr. Math.},
+    VOLUME = {215},
+     PAGES = {237--259},
+ PUBLISHER = {Birkh\"auser, Basel},
+      YEAR = {2004},
+   MRCLASS = {55P43},
+  MRNUMBER = {2039769 (2005g:55010)},
+MRREVIEWER = {Birgit Richter},
+}
+
+@article {LubinTate,
+    AUTHOR = {Lubin, Jonathan and Tate, John},
+     TITLE = {Formal moduli for one-parameter formal {L}ie groups},
+   JOURNAL = {Bull. Soc. Math. France},
+  FJOURNAL = {Bulletin de la Soci\'et\'e Math\'ematique de France},
+    VOLUME = {94},
+      YEAR = {1966},
+     PAGES = {49--59},
+      ISSN = {0037-9484},
+   MRCLASS = {14.50},
+  MRNUMBER = {0238854 (39 \#214)},
+MRREVIEWER = {J. Dieudonn{\'e}},
+}
+
+@incollection {Milne,
+    AUTHOR = {Milne, J. S.},
+     TITLE = {Abelian varieties},
+ BOOKTITLE = {Arithmetic geometry ({S}torrs, {C}onn., 1984)},
+     PAGES = {103--150},
+ PUBLISHER = {Springer, New York},
+      YEAR = {1986},
+   MRCLASS = {14K05 (11G10)},
+  MRNUMBER = {861974},
+}
+
+@article {Milnor,
+    AUTHOR = {Milnor, John},
+     TITLE = {The {S}teenrod algebra and its dual},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {67},
+      YEAR = {1958},
+     PAGES = {150--171},
+      ISSN = {0003-486X},
+   MRCLASS = {55.00 (18.00)},
+  MRNUMBER = {0099653 (20 \#6092)},
+MRREVIEWER = {G. Hirsch},
+}
+
+@article {Morava,
+    AUTHOR = {Morava, Jack},
+     TITLE = {Noetherian localisations of categories of cobordism comodules},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {121},
+      YEAR = {1985},
+    NUMBER = {1},
+     PAGES = {1--39},
+      ISSN = {0003-486X},
+   MRCLASS = {55N22 (14L05 14L15 57R77)},
+  MRNUMBER = {782555 (86g:55004)},
+MRREVIEWER = {Douglas C. Ravenel},
+       DOI = {10.2307/1971192},
+       URL = {http://dx.doi.org/10.2307/1971192},
+}
+
+@article {Nave,
+    AUTHOR = {Nave, Lee S.},
+     TITLE = {The {S}mith-{T}oda complex {$V((p+1)/2)$} does not exist},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {171},
+      YEAR = {2010},
+    NUMBER = {1},
+     PAGES = {491--509},
+      ISSN = {0003-486X},
+     CODEN = {ANMAAH},
+   MRCLASS = {55Q10 (55P42 55Q51)},
+  MRNUMBER = {2630045 (2011m:55012)},
+MRREVIEWER = {Paul G. Goerss},
+       DOI = {10.4007/annals.2010.171.491},
+       URL = {http://dx.doi.org/10.4007/annals.2010.171.491},
+}
+
+@article {Quillen,
+    AUTHOR = {Quillen, Daniel},
+     TITLE = {Elementary proofs of some results of cobordism theory using
+              {S}teenrod operations},
+   JOURNAL = {Advances in Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {7},
+      YEAR = {1971},
+     PAGES = {29--56 (1971)},
+      ISSN = {0001-8708},
+   MRCLASS = {57.10},
+  MRNUMBER = {0290382 (44 \#7566)},
+MRREVIEWER = {T. tom Dieck},
+}
+
+@article {RavenelLocalizationWRTPeriodic,
+    AUTHOR = {Ravenel, Douglas C.},
+     TITLE = {Localization with respect to certain periodic homology
+              theories},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {106},
+      YEAR = {1984},
+    NUMBER = {2},
+     PAGES = {351--414},
+      ISSN = {0002-9327},
+     CODEN = {AJMAAN},
+   MRCLASS = {55P42},
+  MRNUMBER = {737778 (85k:55009)},
+MRREVIEWER = {J. F. Adams},
+       DOI = {10.2307/2374308},
+       URL = {http://dx.doi.org/10.2307/2374308},
+}
+
+@book {RavenelOrangeBook,
+    AUTHOR = {Ravenel, Douglas C.},
+     TITLE = {Nilpotence and periodicity in stable homotopy theory},
+    SERIES = {Annals of Mathematics Studies},
+    VOLUME = {128},
+      NOTE = {Appendix C by Jeff Smith},
+ PUBLISHER = {Princeton University Press, Princeton, NJ},
+      YEAR = {1992},
+     PAGES = {xiv+209},
+      ISBN = {0-691-02572-X},
+   MRCLASS = {55P42 (55N22 55Q10 57R77)},
+  MRNUMBER = {1192553 (94b:55015)},
+MRREVIEWER = {N. J. Kuhn},
+}
+
+@article {RavenelWilsonHopfRingForMU,
+    AUTHOR = {Ravenel, Douglas C. and Wilson, W. Stephen},
+     TITLE = {The {H}opf ring for complex cobordism},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {9},
+      YEAR = {1976/77},
+    NUMBER = {3},
+     PAGES = {241--280},
+      ISSN = {0022-4049},
+   MRCLASS = {55B20 (57D90)},
+  MRNUMBER = {0448337 (56 \#6644)},
+MRREVIEWER = {J. F. Adams},
+}
+
+@article {RavenelWilsonKthyOfEMSpaces,
+    AUTHOR = {Ravenel, Douglas C. and Wilson, W. Stephen},
+     TITLE = {The {M}orava {$K$}-theories of {E}ilenberg-{M}ac {L}ane spaces
+              and the {C}onner-{F}loyd conjecture},
+   JOURNAL = {Amer. J. Math.},
+  FJOURNAL = {American Journal of Mathematics},
+    VOLUME = {102},
+      YEAR = {1980},
+    NUMBER = {4},
+     PAGES = {691--748},
+      ISSN = {0002-9327},
+     CODEN = {AJMAAN},
+   MRCLASS = {55N20 (55P20 55T20 57R85)},
+  MRNUMBER = {584466 (81i:55005)},
+MRREVIEWER = {J. F. Adams},
+       DOI = {10.2307/2374093},
+       URL = {http://dx.doi.org/10.2307/2374093},
+}
+
+@misc{stacks-project,
+  shorthand    = {Stacks},
+  author       = {The {Stacks Project Authors}},
+  title        = {\textit{Stacks Project}},
+  howpublished = {\url{http://stacks.math.columbia.edu}},
+  year         = {2014},
+}
+
+@article {StricklandEthyOfBSigma,
+    AUTHOR = {Strickland, N. P.},
+     TITLE = {Morava {$E$}-theory of symmetric groups},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {37},
+      YEAR = {1998},
+    NUMBER = {4},
+     PAGES = {757--779},
+      ISSN = {0040-9383},
+     CODEN = {TPLGAF},
+   MRCLASS = {55N22 (55P42 55R40)},
+  MRNUMBER = {1607736 (99e:55008)},
+MRREVIEWER = {John Hunton},
+       DOI = {10.1016/S0040-9383(97)00054-2},
+       URL = {http://dx.doi.org/10.1016/S0040-9383(97)00054-2},
+}
+
+@incollection {StricklandFSFG,
+    AUTHOR = {Strickland, Neil P.},
+     TITLE = {Formal schemes and formal groups},
+ BOOKTITLE = {Homotopy invariant algebraic structures ({B}altimore, {MD},
+              1998)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {239},
+     PAGES = {263--352},
+ PUBLISHER = {Amer. Math. Soc.},
+   ADDRESS = {Providence, RI},
+      YEAR = {1999},
+   MRCLASS = {55N22 (14L05 18G99 55N34)},
+  MRNUMBER = {1718087 (2000j:55011)},
+MRREVIEWER = {Mark Hovey},
+}
+
+@incollection {StricklandFPFP,
+    AUTHOR = {Strickland, Neil P.},
+     TITLE = {Functorial philosophy for formal phenomena},
+    SERIES = {Unpublished},
+      note = {\url{http://hopf.math.purdue.edu/Strickland/fpfp.pdf}, Accessed: 2014-01-09},
+}
+
+@book {Wilson,
+    AUTHOR = {Wilson, W. Stephen},
+     TITLE = {Brown-{P}eterson homology: an introduction and sampler},
+    SERIES = {CBMS Regional Conference Series in Mathematics},
+    VOLUME = {48},
+ PUBLISHER = {Conference Board of the Mathematical Sciences},
+   ADDRESS = {Washington, D.C.},
+      YEAR = {1982},
+     PAGES = {v+86},
+      ISBN = {0-8219-1699-3},
+   MRCLASS = {55N22 (55P20 55P42 55Q45 55S25)},
+  MRNUMBER = {655040 (83j:55005)},
+MRREVIEWER = {Franklin P. Peterson},
 }
