sketch out a good chunk of Lecture 4.4

--- a/finite.tex
+++ b/finite.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\chapter{Finite spectra}
+\chapter{Finite spectra}\label{ChapterFiniteSpectra}
 
 
 \todo{Write an introduction for me.}
