--- a/cooperations.tex
+++ b/cooperations.tex
@@ -50,7 +50,7 @@ Under suitable hypotheses, we extract from this an \textit{unstable context for 
 \Spec \pi_* E \arrow{r} \arrow[leftarrow,shift left=\baselineskip]{r}
 \arrow[leftarrow,shift right=\baselineskip]{r}
 \&
-\Spec \pi_* \left( \begin{array}{c} E \\ \sm \\ E \end{array} \right)
+\Spec \pi_* \left( \begin{array}{c} E \\ \circ \\ E \end{array} \right)
 \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} \arrow[leftarrow, shift right=(2*\baselineskip)]{r}
 \&
 \cdots
@@ -62,9 +62,9 @@ as well as a quasicoherent sheaf over it associated to $X$:
 \sheaf{UM}_E(X) & := \left(\pi_* \sheaf{UD}_E(X)\right){\widetilde{}} \\
 & = \left\{
 \begin{tikzcd}[ampersand replacement=\&]
-\pi_* \left( \begin{array}{c} E \\ \sm \\ X \end{array} \right)\widetilde{} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow{r} \&
-\pi_* \left( \begin{array}{c} E \\ \sm \\ E \\ \sm \\ X \end{array} \right)\widetilde{} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} \&
-\pi_* \left( \begin{array}{c} E \\ \sm \\ E \\ \sm \\ E \\ \sm \\ X \end{array} \right)\widetilde{} \arrow[shift left=(4*\baselineskip)]{r} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} \&
+\pi_* \left( \begin{array}{c} E \\ \circ \\ X \end{array} \right)\widetilde{} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow{r} \&
+\pi_* \left( \begin{array}{c} E \\ \circ \\ E \\ \circ \\ X \end{array} \right)\widetilde{} \arrow[shift left=(3*\baselineskip)]{r} \arrow[leftarrow, shift left=(2*\baselineskip)]{r} \arrow[shift left=\baselineskip]{r} \arrow[leftarrow]{r} \arrow[shift right=\baselineskip]{r} \&
+\pi_* \left( \begin{array}{c} E \\ \circ \\ E \\ \circ \\ E \\ \circ \\ X \end{array} \right)\widetilde{} \arrow[shift left=(4*\baselineskip)]{r} \arrow[leftarrow, shift left=(3*\baselineskip)]{r} \arrow[shift left=(2*\baselineskip)]{r} \arrow[leftarrow, shift left=\baselineskip]{r} \arrow{r} \arrow[leftarrow, shift right=\baselineskip]{r} \arrow[shift right=(2*\baselineskip)]{r} \&
 \cdots
 \end{tikzcd}
 \right\}.
