copy in results in Restriction A bar spectral sequences from KLW

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -181,6 +181,8 @@ We spell out some of the Hopf algebra constructions named above.  For a cocommut
 The odd--primary analogue of this result appears in Wilson's book~\cite[Theorem 8.5]{Wilson}.  In that situation, the bar spectral sequences do not degenerate but rather have a single family of differentials, and the result imposes a single relation on the free Hopf ring.
 \end{remark}
 
+\todo[inline]{Pass to the additive unstable cooperations and note that you recover the \emph{monoid of endomorphisms} of $\G_a$.  In algebraic terms, this looks like the dual Steenrod algebra where $\xi_0$ has not been inverted.}
+
 
 
 
