--- a/sigma.tex
+++ b/sigma.tex
@@ -463,6 +463,43 @@ The $\String$ orientation and $\Sigma$--structures
 
 
 
+
+The following definition is meant to curtail the behavior of Hopf algebras at the prime $p = 2$, where the erasure of signs can cause strange things to happen.  In particular, Hopf algebras satisfying the following condition split as the tensor product of an exterior odd--dimensional part and a commutative even--dimensional part.
+
+\begin{definition}\citeme{KLW Remark 4.5}
+A Hopf algebra is said to be \textit{Restriction A} when it is formed from the following components:
+\begin{itemize}
+\item A polynomial algebra on a single even--degree generator.
+\item A truncated polynomial algebra on a single even--degree generator.
+\item An algebra on a single even generator $x$ where a large power $x^{p^d}$ can be rewritten in terms of lower powers.
+\item An exterior algebra on a single odd--degree generator.
+\item A ``divisible algebra'' $P_\infty = k\<a_0, a_1, \ldots, a_n, \ldots\>$ where $a_n^p = a_{n-1}$ and $a_0^p = 0$. \todo{Pepper these with topological examples.}
+\end{itemize}
+\end{definition}
+
+\begin{theorem}\citeme{Theorem 4.2 of KLW}
+Let $F \xrightarrow i E \xrightarrow r B$ be a fibration of connected double loopspaces, let $K$ have K\"unneth isomorphisms, and let $K_* F$ be a bicommutative Hopf algebra.  Then there is a spectral sequence of Hopf algebras \[E^2_{*, *} = \Tor^{K_* F}_{*, *}(K_* E, K_*) = \Tor^{\ker i_*}_{*, *}(K_*, K_*) \otimes \coker i_* \Rightarrow K_* B,\] where $\coker i_* = \Tor^{K_* F}_{0, *}(K_* E, K_*)$.  If $i_*$ is injective, this gives a short exact sequence of Hopf algebras \[K_* \to K_* F \to K_* E \to K_* B \to K_*.\]  If $\ker i_*$ is Restriction A and $\coker i_*$ is even, then $\coker i_*$ injects into $K_* B$ and all differentials take place in $\Tor^{K_* F}_{*, *}(K_* K_*)$.  If \[\Loops F \to \Loops E \to \Loops B\] induces a short exact sequence of Hopf algebras on $K$--homology with $K_* \Loops B$ Restriction A and $K_* F$ even, then the original fiber sequence also induces a short exact sequence of Hopf algebras. \qed
+\end{theorem}
+
+\begin{corollary}\citeme{Theorem 4.4 of KLW}
+Let $E \to B' \to B$ be connective coverings of a simply connected double loopspace $B$.  Consider the following diagram of fiber sequences:
+\begin{center}
+\begin{tikzcd}
+F' \arrow{d} \arrow{r} & E \arrow[-,double]{d} \arrow{r} & B' \arrow{d} \\
+F \arrow{r} & E \arrow{r} & B.
+\end{tikzcd}
+\end{center}
+If the bottom row induces a short exact sequence of Hopf algebras on $K$--homology, then so does the top row. \qed \todo{Maybe you could prove this. It relies on the finite Postnikov systems result which you may have talked about back in the Dieudonne modules sections.}
+\end{corollary}
+
+\todo{We mostly need to see that Postnikov sections induce short exact sequences.  For that, note that the $K$--theory of EM spaces is always Restriction A.}
+
+
+
+
+
+
+
 \begin{theorem}
 There is a bi-Cartesian square
 \begin{center}
