--- a/cooperations.tex
+++ b/cooperations.tex
@@ -138,6 +138,16 @@ I'm fairly certain that the monad associated to the unstable composite adjunctio
 Does the adjective ``Cartesian'' make sense here?  Is it still the case that the topological object is always ``Cartesian'', and $\pi_*$ preserves Cartesianness in the presence of loads of flatness hypotheses on $E_* \OS{E}{*}$?
 
 
+I think the relevant base-change diagram to consider is something like
+\begin{center}
+\begin{tikzcd}[column sep=2.2cm,row sep=2cm]
+\CatOf{Algebras}_E \arrow{r}{\eta_F} \arrow[leftarrow, shift left=0.20cm]{d}{\eta_E} & \text{$F \circ E$ algebras} \arrow{d} \\
+\CatOf{Spaces} \arrow[leftarrow,shift left=0.20cm]{u} \arrow[shift left=0.20cm]{r}{\eta_F} \arrow[leftarrow, shift right=0.20cm]{r} & \CatOf{Algebras}_F.
+\end{tikzcd}
+\end{center}
+A space $X$ gets pushed around this diagram like: up to $E \circ X$, over to $F \circ E \circ X$, down to $F \circ E \circ X$, where it receives a natural map \[F \circ X \to F \circ E \circ X.\]  In the case $E = F$, this is the interesting unit map, i.e., the coaction map.  Probably $\pi_* F \circ E \circ X$ is also the recipient of some map connected to the unstable version of \FH.
+
+
 
 
 
@@ -149,7 +159,7 @@ Restricting to additive cooperations: the indecomposable quotient
 
 The homology suspension element, the relation $e \circ e = b_{(0)}$, and passing to the stabilization
 
-\todo{Neil's MO answer about $H_* K(\Z, 3)$}
+\todo{Neil's MO answer about $H_* K(\Z, 3)$: http://mathoverflow.net/a/216041/1094}
 
 
 -----
