--- a/finite.tex
+++ b/finite.tex
@@ -166,6 +166,9 @@ Hovey's \textit{Morita theory for Hopf algebroids and presheaves of groupoids} h
 I think you can make sense of ``Cartesian'' directly on $\sheaf D_E(X)$, and that such sheaves should be Cartesian over $\sheaf D_E$.  You'd then want to remark that $\pi_*$ preserves Cartesian-ness exactly when just that one morphism is Cartesian; then everything else follows.  That's a pretty cool result, all told.
 
 
+\todo{I suspect you'll have time to move the ``upcoming program'' sketch scheduled for the beginning of the next lecture into the end of this one.  I think that's better narration anyhow.}
+
+
 
 
 
