--- a/quillen.tex
+++ b/quillen.tex
@@ -664,6 +664,8 @@ This is motivation enough for us to investigate the moduli of formal groups.  We
 
 \todo{Section II.6 of Adams's blue book talks about $\pi_* E \sm MU$.}
 
+\todo{Remark that this analysis works for $MO$ too, and it's even easier since there $2 = 0$.}
+
 
 
 
@@ -677,6 +679,11 @@ This is motivation enough for us to investigate the moduli of formal groups.  We
 
 
 \subsection*{Run off}
+
+
+
+
+There's something special about the universal example.  Every complex-oriented theory has Chern classes, and they always push forward to give cohomology operations $MU \to E$, but you can't compose those.  Also, every complex-oriented theory has certain cohomology classes representable as $f_* 1$ for a complex-oriented map of manifolds $W \to Z$, but only for $MU$ is this exhaustive.
 
 
 
