sketch out some of the final chapter

--- a/hinfty.tex
+++ b/hinfty.tex
@@ -2,21 +2,85 @@
 
 \chapter{Power operations}
 
+\todo{Write an introduction for me.}
+
+
+\todo[inline]{There should be a context-based presentation of this chapter's material too.  What do contexts for structured ring spectra look like?  Why would you consider them --- what object are you trying to approximate?  How do you guess that the algebraic model is reasonable until you're aware of something like Strickland's theorem?}
+
+
+
+\section{Isogenies}
+
+\todo[inline]{Something that these notes routinely fail to do is to lead into the algebraic geometry in a believable way.  ``Today we're going to talk about isogenies'' --- and then, lo' and behold, isogenies appear the next day in algebraic topology.  This book would read much better if it showed how these structures were guessed to exist to begin with.}
+
+Here's a definition of an isogeny.  Weierstrass preparation can be phrased as saying that a Weierstrass map is a coordinate change and a standard isogeny.\todo{Where does this come from?  It's Strickland's, I know that.}
+\begin{definition}
+Take $C$ and $D$ to be formal curves over $X$.  A map $f: C \to D$ is an \textit{isogeny} when the induced map $C \to C \times_X D$ exhibits $C$ as a divisor on $C \times_X D$ as $D$--schemes.
+\end{definition}
+
+
+In fact, every map in positive characteristic can be factored as a coordinate change and an isogeny, which is a weak form of preparation.
+
+
+Lubin's finite quotients of formal groups. (Interaction with the Lubin--Tate moduli problem?  Or does this belong in the next day?)
+
+
+Write out isogenies of the additive formal group, note that you just get the unstable Steenrod algebra again.  This is a remarkable accident.
+
+
+Push and pull maps for divisor schemes
+
+
+The Drinfel'd moduli ring, level structures
+
+
+
+
 \section{HKR characters}
 
-Following... the original? Following Nat?
+There's a sufficient amount of reliance on character theory in Matt's thesis that we should talk about it.  You should write that action and then backtrack here to see what you need for it.
+
+
+
+
+
+
+
+\section{Ando coordinates}
+
+Ando's Theorem 3.4.4: Let $D_j$ be the ring extension of $E_n$ which trivializes the $p^j$--torsion subgroup of $\G_{E_n}$.  Let $H$ be a finite subgroup of $\G_{E_n}(D_k)$.  There is an unstable transformation of ring-valued functors \[E_n X \xrightarrow{\Psi^H} D_j \otimes E_n X,\] and if $F$ is an Ando coordinate then for any line bundle $\L \to X$ there is a formula \[\psi^H(e\L) = \prod_{h \in H} (h +_F e\L) \in D_j \otimes E_n(X).\]
+
+$D_j$ is Galois over $E_n$ with Galois group $\GL_n(\Z/p^j)$.  If $\rho$ is a collection of finite subgroups weighted by elements of $E_n$ which is stable under the action of the Galois group, then $\Psi^\rho$ descends to take values in just $E_n$.  (For example, the entire subgroup has this property.)
+
+This is built by a character map.  Take $H \subseteq F(D_j)[p^j]$ to be a finite subgroup again; then there is a map \[\chi^H: E_n(D_{H^*} X) \to D_j \otimes E_n(X),\] where $D_{H^*}$ denotes the extended power construction on $X$ using the Pontryagin dual of $H$.  This composes to give an operation \[Q^H: MU^{2*}(X) \xrightarrow{P_{H^*}} MU^{2|H|*}(D_{H^*} X) \to E_n^{2|H|*}(D_{H^*} X) \xrightarrow{\chi^H} D_j \otimes E_n^{2|H|*}(X).\]  Then $Q^H$ is a ring homomorphism with effects
+\begin{align*}
+Q^H F^{MU} & = F/H, &
+Q^H(e_{MU} \L) & = \prod_{h \in H} h +_F e\L.
+\end{align*}
+
+Then we need to factor $Q^H: MU(X) \to D_j \otimes E_n(X)$ across the orienting map $MU \to E_n$.  Since $E_n$ is Landweber flat and $Q^H$ is a ring map, it suffices to do this for the one--point space, i.e., to construct a ring homomorphism \[\Psi^H: E_n \to D_j\] so that $\Psi^H = \Psi^H(*) \otimes Q^H$.  The first condition above then translates to $\Psi^H F^{MU} = F/H$.
+
+Matt claims that 3.2.10 is the beating heart of the paper.  Certainly it deserves mention here, since we saw the version in Quillen's paper weeks ago.
+
+Section 3.3 is the part that uses HKR character theory.  The beginning only uses the familiar description of $BA_{E_n}$ for finite abelian $A$, but then it gets serious.
+
+
+
+
+
 
 \section{Strickland's theorem}
 
 Following... the original? Following Nat?
 
-\section{$p$--divisible groups and the Drinfel'd ring}
+Continuing on from the above, if we expected $E_n$ to be $E_\infty$ (or even $H_\infty$) so that it had power operations, then we would want to understand $E_n B\Sigma_{p^j}$ and match that with the operations we see.
 
-\section{Ando coordinates}
 
-\section{Theorems revisited}
 
-The proof of Quillen's theorem and its interpretation in terms of isogenies of formal groups
+
+
+
+\section{Interaction with $\Theta$--structures}
 
 The Ando--Hopkins--Strickland result that the $\sigma$--orientation is an $H_\infty$--map
 
