--- a/sigma.tex
+++ b/sigma.tex
@@ -11,14 +11,19 @@
 
 
 
-\section{The complex Atiyah--Bott--Shapiro orientation}
+\section{Thom sheaves}
 
 The analysis of $BSU_K$, purely in terms of special divisors.
 
-The phrasing of $MUP$ and $MU$ orientations in terms of $C^0$ and $C^1$--structures
+Thom spaces and Thom sheaves
+
+The phrasing of $MUP$ and $MU$ orientations in terms of $C^0$ and $C^1$--structures.  (Maybe avoid using this notation, though, since the special divisor presentation is nontrivially equivalent to $C^2$?)
+
+Generalization to $MSU$ orientations
+
+Is it possible to give an example of a complex-oriented theory which receives an $MSU$ orientation which \emph{does not} factor the complex orientation but \emph{does} (\emph{must}, really) factor the unit?
 
 
-I'm not sure what story I mean to tell on this day.  I want to get some low-order version of the story out of the way, to use as a template for the topological side of things.
 
 
 
@@ -451,13 +456,11 @@ Finally, we want to see that for $[M] \in \pi_{2n} MU[6, \infty)$, \[\Phi(M) := 
 
 
 
-\section{The $\String$ orientation}
-
-Kitchloo--Laures--Wilson's results on Restriction A Hopf algebras and the bar spectral sequence
+\section{$\Spin$ and $\String$ orientations}
 
 Formal schemes for certain real $K$--theory spaces
 
-The Atiyah--Bott--Shapiro orientation and the fibration $BSU \to BSpin$ \citeme{Theorem 2.3.5.iv in KLW}
+The Atiyah--Bott--Shapiro orientation and the fibration $BSU \to BSpin$ \citeme{Theorem 2.3.5.iv in KLW, the last fibration in 2.3.2 at $k=-2$, and sections 5.3 and 5.13}
 
 The $\String$ orientation and $\Sigma$--structures
 
