--- a/unknowns.tex
+++ b/unknowns.tex
@@ -2,6 +2,8 @@
 
 \chapter{Knowns and unknowns}
 
+\section{Erase me}
+
 \oldsection*{The modularity of the $M\String$ orientation}
 
 $E_\infty$ orientations by $M\String$
@@ -44,4 +46,6 @@ Barry's $p$--adic measures
 Fixed point spectra and e.g. $L_{K(2)} \tmf$.
 
 Blueshift, A--M--S, and the relationship to A--F--G?
+
+Does $E_n$ receive an $E_\infty$ orientation?  Does $BP$?
 
