--- a/quillen.tex
+++ b/quillen.tex
@@ -683,7 +683,7 @@ This is motivation enough for us to investigate the moduli of formal groups.  We
 
 
 
-There's something special about the universal example.  Every complex-oriented theory has Chern classes, and they always push forward to give cohomology operations $MU \to E$, but you can't compose those.  Also, every complex-oriented theory has certain cohomology classes representable as $f_* 1$ for a complex-oriented map of manifolds $W \to Z$, but only for $MU$ is this exhaustive.
+There's something special about the universal example.  Every complex-oriented theory has Chern classes, and they always push forward to give cohomology operations $MU \to E$, but you can't compose those.  Also, every complex-oriented theory has certain cohomology classes representable as $f_* 1$ for a complex-oriented map of manifolds $W \to Z$, but only for $MU$ is this exhaustive.\citeme{Matt cites ``Thom's theorem'', [Tho51], in his published thesis.}
 
 
 
