dead days at the end of the semester, so i can see them in the ToC

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -4,6 +4,12 @@
 
 \section{Erase me}
 
+\section{Erase me}
+
+\section{Erase me}
+
+\section{Erase me}
+
 \oldsection*{The modularity of the $M\String$ orientation}
 
 $E_\infty$ orientations by $M\String$
