don’t forget to thank martin

--- a/preface.tex
+++ b/preface.tex
@@ -6,13 +6,17 @@
 
 \subsection*{Acknowledgements}
 
-Matthew Ando, Michael Hopkins, Neil Strickland, Constantin Teleman
+Matthew Ando, Michael Hopkins, Neil Strickland
+
+Constantin Teleman
 
 Haynes Miller, Doug Ravenel, Steve Wilson
 
 Jack Morava
 
 Nat Stapleton
+
+Martin Bendersky
 
 
 
