citation for the alpha_1/1 argument

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -26,7 +26,7 @@ The Bousfield--Kuhn functor and the Rezk logarithm
 
 $\TAF$ and friends
 
-The $\alpha_{1/1}$ argument
+The $\alpha_{1/1}$ argument: Prop 2.3.2 of Hovey's $v_n$--elements of ring spectra
 
 % The HLP calculations
 
