change title, add motivating remark about cotensor product

--- a/mo.tex
+++ b/mo.tex
@@ -335,6 +335,8 @@ The category $\CatOf{Comodules}_A$ has enough injectives.  Namely, if $M$ is an 
 In our case, $M$ itself is always injective, so there's already an injective map $\psi_M: M \to M \otimes A$: the coaction map.  The assertion that this map is coassociative is identical to saying that it is a map of comodules.
 \end{remark}
 
+\todo{Dylan says that ``cotensor of comodules over Hopf algebroids agrees with global sections of tensor product of sheaves''.  Maybe you can introduce this now, or maybe it belongs in the opening bits of Finite Spectra.}
+
 \textbf{While we're here, let's record some facts about base change.}\todo{Put filler here.}
 
 \begin{definition}
