some meat for Lecture 6.4

--- a/main.tex
+++ b/main.tex
@@ -85,6 +85,7 @@
 \renewcommand{\t}{\mathbf t}
 \newcommand{\Gm}{\mathbb G_m}
 \newcommand{\h}{\mathfrak h}
+\newcommand{\D}{\mathbb D}
 
 \newcommand{\<}{\langle}
 \renewcommand{\>}{\rangle}
@@ -152,6 +153,8 @@
 \DeclareMathOperator{\Alt}{Alt}
 \DeclareMathOperator{\Tot}{Tot}
 \DeclareMathOperator{\height}{ht}
+\DeclareMathOperator{\Sub}{Sub}
+\DeclareMathOperator{\Level}{Level}
 
 \numberwithin{equation}{section}
 
