--- a/quillen.tex
+++ b/quillen.tex
@@ -664,7 +664,9 @@ This is motivation enough for us to investigate the moduli of formal groups.  We
 
 \todo{Section II.6 of Adams's blue book talks about $\pi_* E \sm MU$.}
 
-\todo{Remark that this analysis works for $MO$ too, and it's even easier since there $2 = 0$.}
+\begin{remark}
+\todo[inline]{Remark that this analysis works for $MO$ too, and it's even easier since there $2 = 0$.  On the other hand, this doesn't work for $MSp$ or $MSO$ --- why?  Conversely, there's something special about the universal example.  Every complex-oriented theory has Chern classes, and they always push forward to give cohomology operations $MU \to E$, but you can't compose those.  Also, every complex-oriented theory has certain cohomology classes representable as $f_* 1$ for a complex-oriented map of manifolds $W \to Z$, but only for $MU$ is this exhaustive. (In Matt's published thesis he cites ``Thom's theorem'', [Tho51], for this result.)}
+\end{remark}
 
 
 
@@ -679,11 +681,6 @@ This is motivation enough for us to investigate the moduli of formal groups.  We
 
 
 \subsection*{Run off}
-
-
-
-
-There's something special about the universal example.  Every complex-oriented theory has Chern classes, and they always push forward to give cohomology operations $MU \to E$, but you can't compose those.  Also, every complex-oriented theory has certain cohomology classes representable as $f_* 1$ for a complex-oriented map of manifolds $W \to Z$, but only for $MU$ is this exhaustive.\citeme{Matt cites ``Thom's theorem'', [Tho51], in his published thesis.}
 
 
 
